syntax = "proto3";

package org.project_planton.credential.v1;

import "org/project_planton/app/credential/v1/io.proto";

//CredentialCommandController provides operations for managing cloud provider credentials.
service CredentialCommandController {
  // CreateCredential creates a new cloud provider credential.
  rpc Create(CreateCredentialRequest) returns (CreateCredentialResponse);
  // UpdateCredential updates an existing credential.
  rpc Update(UpdateCredentialRequest) returns (UpdateCredentialResponse);
  // DeleteCredential deletes a credential by ID.
  rpc Delete(DeleteCredentialRequest) returns (DeleteCredentialResponse);
}
